fixes modal scroll and adds no-header style where needed

--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -10,6 +10,10 @@
   width: 100%;
   z-index: 102;
 
+  &.-no-header {
+    top: 0;
+  }
+
   @media #{$mq-tablet} {
     background: transparent;
     height: auto;
