--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -46,6 +46,10 @@
   &.-embed {
     top: $header-height-mobile;
   }
+
+  &.-no-header {
+    top: $accordion-mobile-height;
+  }
 }
 
 .attributions-container > .mobile-map-attributions {
