--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -55,10 +55,12 @@
 
       .contain-padding {
         padding: 40px 20px 20px;
+        height: 100%;
         overflow-y: auto;
 
         @media #{$mq-tablet} {
           padding: 60px;
+          height: auto;
         }
 
         .modal-title {
