--- a/app/styles/components/map/c-report-panel.scss
+++ b/app/styles/components/map/c-report-panel.scss
@@ -27,6 +27,12 @@
     }
   }
 
+  &.-no-footer {
+    @media #{$mq-mobile-large} {
+      bottom: $timebar-height;
+    }
+  }
+
   > .menu {
     align-items: center;
     background-color: $color-13;
