--- a/app/styles/components/shared/c-header.scss
+++ b/app/styles/components/shared/c-header.scss
@@ -13,6 +13,7 @@
   .contain-nav {
     align-items: center;
     display: flex;
+    justify-content: flex-end;
     height: $header-height-mobile;
 
     @media #{$mq-tablet} {
@@ -67,6 +68,7 @@
     min-height: 16px;
     min-width: 19px;
     order: 3;
+    cursor: pointer;
 
     @media #{$mq-tablet} {
       display: none;
