--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -18,12 +18,19 @@
     background: transparent;
     height: auto;
     left: auto;
-    max-height: calc(100vh - #{$timebar-height + $duration-picker-height + $map-footer-height + $offset-panel-control});
+    max-height: calc(100vh - #{$panel-control-base-height + $offset-panel-control});
     max-width: 350px;
     overflow-y: auto;
     padding: 0 0 0 30px;
     right: 0;
     top: 0;
+
+  }
+
+  &.-is-report-visible {
+    @media #{$mq-tablet} {
+      max-height: calc(100vh - #{$panel-control-base-height + $offset-panel-control-with-report});
+    }
   }
 
   > .bg-wrapper {
