--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -18,6 +18,9 @@ $header-height: 95px;
 $accordion-mobile-height: 60px;
 $vessel-info-height: 70px;
 
+$map-panels-width: 320px;
+$control-panel-left-offset: 14px;
+
 
 // Map
 $timebar-height: 70px;
