--- a/app/styles/components/c-map-panels.scss
+++ b/app/styles/components/c-map-panels.scss
@@ -10,6 +10,6 @@
     justify-content: space-between;
     position: absolute;
     right: 0;
-    width: 320px;
+    width: $map-panels-width + $control-panel-left-offset;
   }
 }
