--- a/app/styles/components/map/c-report-panel.scss
+++ b/app/styles/components/map/c-report-panel.scss
@@ -11,8 +11,10 @@
 
   @media #{$mq-tablet} {
     flex: 0 0 auto;
+    margin-left: $control-panel-left-offset;
     position: relative;
     top: 0;
+    width: calc(100% - #{$control-panel-left-offset});
   }
 
   &.-minimized {
