--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -154,3 +154,7 @@ button {
   background-color: transparent;
   border: 0;
 }
+
+:global .-map-pointer .gm-style > div {
+  cursor: pointer !important;
+}
