fixed map interaction

--- a/app/styles/components/c-map-panels.scss
+++ b/app/styles/components/c-map-panels.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     height: calc(100vh - #{$panel-control-base-height});
     justify-content: space-between;
+    pointer-events: none;
     position: absolute;
     right: 0;
     width: $map-panels-width + $control-panel-left-offset;
