--- a/app/styles/components/map/c-report-panel.scss
+++ b/app/styles/components/map/c-report-panel.scss
@@ -3,6 +3,7 @@
 
 .c-report-panel {
   bottom: $offset-panel-control-mobile;
+  pointer-events: auto;
   position: absolute;
   transform: translate(0, 0);
   transition: transform .25s ease;
