--- a/app/styles/components/map/c-durationpicker.scss
+++ b/app/styles/components/map/c-durationpicker.scss
@@ -27,6 +27,7 @@
       -webkit-user-select: none;
       color: $color-4;
       font-size: $font-size-xxs-small;
+      font-weight: bold;
       text-transform: uppercase;
       user-select: none;
     }
