--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -158,3 +158,7 @@ button {
 :global .-map-pointer .gm-style > div {
   cursor: pointer !important;
 }
+
+:global .-map-zoom .gm-style > div {
+  cursor: zoom-in !important;
+}
