--- a/app/styles/components/c-loader.scss
+++ b/app/styles/components/c-loader.scss
@@ -1,90 +1,83 @@
 @import '../_settings';
 
 .c-loader {
+  height: 65px;
+  margin: 90px auto;
   position: relative;
+  width: 65px;
 
-  &.-absolute {
-    position: absolute;
-    z-index: 103;
+  .sk-child {
     height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
     width: 100%;
-    background-color: rgba($color-1, 0.7);
 
-    > .loader-container {
-      position: relative;
-      top: 50%;
-      left: 50%;
-      margin: 0;
-      transform: translate(-50%, -50%);
-      background-color: transparent;
+    &::before {
+      animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
+      background-color: $color-8;
+      border-radius: 100%;
+      content: '';
+      display: block;
+      height: 10px;
+      margin: 0 auto;
+      width: 10px;
     }
   }
 
-  &.-tiny {
-    align-items: center;
-    background-color: $color-19;
-    border-radius: 50%;
-    box-shadow: 0 0 8px 0 rgba($color-22, .3);
-    color: $color-4;
-    display: flex;
-    height: 40px;
-    justify-content: center;
-    text-align: center;
-    width: 40px;
+  .sk-circle2 {
+    transform: rotate(45deg);
 
-    .loader-container {
-      position: absolute;
-      width: 20px;
-      height: 25px;
-      background-color: transparent;
-
-      > .loader-bubble::before {
-        height: 5px;
-        width: 5px;
-      }
+    &::before {
+      animation-delay: -1.1s;
     }
   }
 
-  .loader-container {
-    width: 65px;
-    margin: 0 auto;
-    height: 65px;
-    background-color: rgba($color-1, 0.7);
+  .sk-circle3 {
+    transform: rotate(90deg);
 
-    > .loader-bubble {
-      height: 100%;
-      left: 0;
-      position: absolute;
-      top: 0;
-      width: 100%;
+    &::before {
+      animation-delay: -1s;
+    }
+  }
 
-      &::before {
-        animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
-        background-color: $color-4;
-        border-radius: 100%;
-        content: '';
-        display: block;
-        height: 10px;
-        margin: 0 auto;
-        width: 10px;
-      }
+  .sk-circle4 {
+    transform: rotate(135deg);
 
-      // set initial values
-      $rotation: 45;
-      $delay: -1.1;
-      // iterate from elements 1 to 8
-      @for $i from 1 through 8 {
-        &:nth-child(#{$i}) {
-          transform: rotate(#{$rotation}deg);
+    &::before {
+      animation-delay: -.9s;
+    }
+  }
 
-          &::before {
-            animation-delay: #{$delay}s;
-          }
-        }
-        // update values for next iteration
-        $rotation: $rotation + 45;
-        $delay: $delay + 0.1;
-      }
+  .sk-circle5 {
+    transform: rotate(180deg);
+
+    &::before {
+      animation-delay: -.8s;
+    }
+  }
+
+  .sk-circle6 {
+    transform: rotate(225deg);
+
+    &::before {
+      animation-delay: -.7s;
+    }
+  }
+
+  .sk-circle7 {
+    transform: rotate(270deg);
+
+    &::before {
+      animation-delay: -.6s;
+    }
+  }
+
+  .sk-circle8 {
+    transform: rotate(315deg);
+
+    &::before {
+      animation-delay: -.5s;
     }
   }
 }
