--- a/app/styles/components/map/c-report-panel.scss
+++ b/app/styles/components/map/c-report-panel.scss
@@ -2,31 +2,33 @@
 @import '../../mixins';
 
 .c-report-panel {
-  bottom: $offset-panel-control-mobile;
+  left: 0;
   position: absolute;
+  top: calc(#{$header-height} + #{$accordion-mobile-height});
   transform: translate(0, 0);
   transition: transform .25s ease;
   width: 100%;
-  z-index: 103;
+  z-index: 5;
 
-  @media #{$mq-tablet} {
-    flex: 0 0 auto;
-    margin-left: $control-panel-left-offset;
-    position: relative;
-    top: 0;
-    width: calc(100% - #{$control-panel-left-offset});
+  @media #{$mq-mobile-large} {
+    bottom: calc(#{$timebar-height} + #{$map-footer-height});
+    left: auto;
+    min-width: 320px;
+    right: 0;
+    top: auto;
+    width: auto;
   }
 
   &.-minimized {
     transform: translate(0, calc(-100% - #{$report-panel-menu-height}));
 
-    @media #{$mq-tablet} {
+    @media #{$mq-mobile-large} {
       transform: translate(0, 0);
     }
   }
 
   &.-no-footer {
-    @media #{$mq-tablet} {
+    @media #{$mq-mobile-large} {
       bottom: $timebar-height;
     }
   }
