--- a/app/styles/components/c-vessel-info-panel.scss
+++ b/app/styles/components/c-vessel-info-panel.scss
@@ -75,6 +75,7 @@
 
     .external-link {
       color: $color-3;
+      cursor: pointer;
       display: inline-block;
       font-family: $font-family-1;
       font-size: $font-size-xxs-small;
