--- a/app/styles/components/map/c-layer-library.scss
+++ b/app/styles/components/map/c-layer-library.scss
@@ -98,7 +98,7 @@
       max-width: 90%;
 
       > span {
-        overflow-y: hidden;
+        overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
       }
