fishing hours modal

--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -43,6 +43,11 @@
       display: flex;
     }
 
+    .fishing-hours {
+      cursor: pointer;
+      margin-left: 5px;
+    }
+
     .counter-description {
       color: rgba($color-3, .5);
       font-family: $font-family-1;
