--- a/app/styles/components/map/c-welcome-modal.scss
+++ b/app/styles/components/map/c-welcome-modal.scss
@@ -3,8 +3,6 @@
 .c-welcome-modal {
   display: flex;
   font-family: $font-family-1;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
   position: relative;
 
@@ -14,9 +12,6 @@
 
   > .content {
     overflow: auto;
-    max-height: 80vh;
-    text-align: center;
-    padding: 45px 0;
 
     @media #{$mq-tablet} {
       max-height: 40vh;
@@ -29,9 +24,21 @@
       text-align: center;
     }
 
-    p {
+    p, ul {
       font-size: $font-size-x-small;
       margin: 25px 0;
+
+      &:first-child {
+        margin: 0;
+      }
+    }
+
+    li {
+      margin: 10px 0 0 1em;
+    }
+
+    ul {
+      list-style: square;
     }
 
     a {
@@ -43,44 +50,5 @@
       margin-bottom: 5px;
       border-bottom: solid 1px $color-29;
     }
-
   }
-
-  .btn-action {
-    background-color: $color-3;
-    border: 0;
-    color: $color-4;
-    cursor: pointer;
-    display: inline-block;
-    font-size: $font-size-x-small;
-    font-weight: $font-weight-bold;
-    letter-spacing: -.1px;
-    margin: 10px 0;
-    padding: 10px 25px;
-    text-transform: uppercase;
-    z-index: 3;
-  }
-
-  &:after {
-    content: '';
-    position: absolute;
-    height: 30%;
-    width: 100%;
-    background-image: linear-gradient(to bottom, rgba(4, 20, 56, 0.0), #021236);
-    pointer-events: none;
-    bottom: 0;
-    left: 0;
-  }
-
-  &:before {
-    content: '';
-    position: absolute;
-    height: 10%;
-    width: 100%;
-    background-image: linear-gradient(to top, rgba(4, 20, 56, 0.0), #021236);
-    pointer-events: none;
-    top: 0;
-    left: 0;
-  }
-
 }
