--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -40,6 +40,12 @@
       max-height: 494px;
     }
 
+    @media #{$mq-desktop} {
+      height: 80%;
+      max-height: 700px;
+      width: 860px;
+    }
+
     .contain-content {
       -webkit-overflow-scrolling: touch;
       background-color: $color-2;
