display warning in canvas mode

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -78,6 +78,7 @@ $color-29: #da4735;
 $color-30: #55acee;
 $hsla-begin: hsla(0, 0%, 0%, .1);
 $hsla-end: hsla(0, 0%, 100%, .1);
+$banner-bg: rgb(255, 237, 0);
 
 // Colors to review
 $color-14: #2d3a57;
