fixed warning banner style

--- a/app/styles/components/c-app.scss
+++ b/app/styles/components/c-app.scss
@@ -11,8 +11,8 @@
 }
 
 .nowebgl-banner {
-  background-color: $banner-bg;
-  color: $color-6;
+  background-color: $color-19;
+  color: $color-4;
   display: flex;
   flex-direction: column;
   font-family: $font-family-1;
