--- a/app/styles/components/map/c-datepicker.scss
+++ b/app/styles/components/map/c-datepicker.scss
@@ -1,11 +1,7 @@
 @import '../../settings';
 
 :global .c-datepicker {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
   height: 100%;
-  justify-content: center;
   position: relative;
 
   &::after {
@@ -20,40 +16,44 @@
     width: 1px;
   }
 
-  > .c-datepicker-title {
+  .c-datepicker-title {
     color: rgba($color-3, .5);
     font-size: $font-size-xs-small;
     font-weight: $font-weight-bold;
+    padding-bottom: 20px;
+    position: absolute;
+    text-align: center;
     text-transform: uppercase;
+    top: 16px;
+    width: 100%;
 
     @media #{$mq-mobile-large} {
       font-size: $font-size-small;
     }
-  }
 
-  > .datepicker-date {
-    color: $color-3;
-    font-size: $font-size-xs-small;
-    font-weight: $font-weight-bold;
-    max-width: 80%;
-    text-align: center;
-    text-transform: uppercase;
-    word-wrap: break-word;
+    @media #{$mq-laptop} {
+      &::after {
+        content: ' date';
+      }
+    }
   }
 
   .react-datepicker__input-container {
     height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
   }
 
   input {
+    background: transparent;
     border: 0;
+    color: $color-3;
     cursor: pointer;
+    font-size: $font-size-xs-small;
+    font-weight: $font-weight-bold;
     height: 100%;
-    opacity: 0;
+    padding-top: 11px;
+    text-align: center;
+    text-transform: uppercase;
     width: 100%;
+    word-wrap: break-word;
   }
 }
