--- a/app/styles/components/c-app.scss
+++ b/app/styles/components/c-app.scss
@@ -5,11 +5,6 @@
   width: 100%;
 }
 
-.-has-banner {
-  height: calc(100% - 60px);
-  top: 60px;
-}
-
 .banner {
   background-color: $color-19;
   border-bottom: 1px solid $color-1;
@@ -17,11 +12,19 @@
   display: flex;
   flex-direction: column;
   font-family: $font-family-1;
-  font-size: $font-size-small;
+  font-size: $font-size-xs-small;
   font-weight: bold;
   height: 60px;
   justify-content: center;
-  padding: 0 30px 0 10px;
+  padding: 0 10px 0 50px;
+  position: absolute;
+  width: calc(100% - 50px);
+  z-index: 6;
+
+  @media #{$mq-tablet} {
+    width: calc(100% - #{$map-panels-width});
+    font-size: $font-size-small;
+  }
 
   a {
     color: $color-4;
@@ -34,14 +37,14 @@
     border-radius: 100%;
     cursor: pointer;
     height: 20px;
+    left: 20px;
     position: absolute;
-    right: 20px;
     top: 20px;
     width: 20px;
 
     > .icon {
-      top: -1px;
       position: relative;
+      top: -1px;
     }
   }
 }
