--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -51,7 +51,12 @@
       background-color: $color-2;
       border: 1px solid rgba($color-3, .3);
       color: $color-4;
+      height: 100%;
       width: 100%;
+
+      @media #{$mq-tablet} {
+        height: auto;
+      }
 
       .contain-button {
         position: absolute;
@@ -61,7 +66,7 @@
       .contain-padding {
         padding: 40px 20px 20px;
         height: 100%;
-        overflow-y: auto;
+        overflow-y: scroll;
 
         @media #{$mq-tablet} {
           padding: 60px;
