--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -66,7 +66,7 @@
       .contain-padding {
         padding: 40px 20px 20px;
         height: 100%;
-        overflow-y: scroll;
+        overflow-y: auto;
 
         @media #{$mq-tablet} {
           padding: 60px;
