--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -42,75 +42,15 @@ body {
   height: 100%;
 }
 
-:global .section-page {
-  padding: 55px 0 65px;
-  position: relative;
-
-  &::after {
-    background-color: $color-10;
-    bottom: 0;
-    content: '';
-    display: inline-block;
-    height: 2px;
-    left: 50%;
-    position: absolute;
-    top: auto;
-    transform: translate(-50%, 0);
-    width: 100vw;
-  }
-
-  &:first-child {
-    padding-top: 0;
-  }
-
-  &:last-child {
-    padding-bottom: 0;
-
-    &::after {
-      content: none;
-    }
-  }
-}
-
-:global .section-title {
-  color: $color-9;
-  font-size: $font-size-x-medium;
-  font-weight: $font-weight-normal;
-  line-height: 1.05;
-  margin-bottom: 30px;
-
-  @media #{$mq-tablet} {
-    font-size: $font-size-xx-big;
-    margin-bottom: 70px;
-  }
-
-  &.article-page {
-    font-size: $font-size-xx-big;
-    margin-bottom: 0;
-  }
-}
-
-:global .section-subtitle {
-  color: $color-9;
-  font-size: $font-size-medium;
-  font-weight: $font-weight-normal;
-  line-height: 1.4;
-
-  @media #{$mq-tablet} {
-    font-size: $font-size-x-medium;
-  }
-}
-
-:global .login-required-link {
+:global .loginRequiredLink {
   color: $color-3;
+  cursor: pointer;
   display: inline-block;
   font-family: $font-family-1;
   font-size: $font-size-xs-small;
   margin: 15px 0 0;
   text-decoration: underline;
-  cursor: pointer;
 }
-
 
 p {
   color: $color-9;
@@ -123,23 +63,11 @@ p {
   }
 }
 
-address {
-  color: $color-9;
-  font-family: $font-family-2;
-  font-size: $font-size-normal;
-  line-height: 1.6;
-}
-
 a {
   text-decoration: none;
 
   &:visited {
     color: currentColor;
-  }
-
-  :global &.gfw-link {
-    color: $color-19;
-    font-weight: $font-weight-bold;
   }
 }
 
@@ -155,10 +83,10 @@ button {
   border: 0;
 }
 
-:global .-map-pointer .gm-style > div {
+:global ._mapPointer .gm-style > div {
   cursor: pointer !important;
 }
 
-:global .-map-zoom .gm-style > div {
+:global ._mapZoom .gm-style > div {
   cursor: zoom-in !important;
 }
