Fix styles in areasPanel, add primary button color

--- a/app/styles/components/map/button.scss
+++ b/app/styles/components/map/button.scss
@@ -27,4 +27,13 @@
   &._big {
     height: 40px;
   }
+
+  &._wide {
+    width: 100%;
+  }
+
+  &._primary {
+    background-color: $color-button-primary;
+    color: $color-4;
+  }
 }
