--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -76,8 +76,11 @@ $color-27: #c7c7c7;
 $color-28: #39579b;
 $color-29: #da4735;
 $color-30: #55acee;
+$color-31: #99D3E1;
 $hsla-begin: hsla(0, 0%, 0%, .1);
 $hsla-end: hsla(0, 0%, 100%, .1);
+
+$color-button-primary: $color-31;
 
 // Colors to review
 $color-14: #2d3a57;
