Add color picker component, colors, styles and light panel on areas panel

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -81,6 +81,17 @@ $hsla-begin: hsla(0, 0%, 0%, .1);
 $hsla-end: hsla(0, 0%, 100%, .1);
 
 $color-button-primary: $color-31;
+$color-mid-blue: $color-8;
+$color-white: $color-4;
+
+// Layers colors
+
+$yellow: #FBFF8B;
+$light-blue: #67FBFE;
+$purple: #7D84FA;
+$purple: #7D84FA;
+$orange: #CC4E4E;
+$pink: #CC68C4;
 
 // Colors to review
 $color-14: #2d3a57;
