Create area list with toggle visibility functionality and extract areas form component

--- a/app/styles/components/control_panel.scss
+++ b/app/styles/components/control_panel.scss
@@ -260,3 +260,13 @@
   padding-bottom: 10px;
   padding-left: 25px;
 }
+
+.panel {
+  margin-bottom: 10px;
+  margin-left: -25px;
+  margin-right: -25px;
+  color: $color-white;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 25px;
+}
