--- a/app/styles/components/vessel-info-panel.scss
+++ b/app/styles/components/vessel-info-panel.scss
@@ -6,7 +6,7 @@
   display: block;
   font-family: $font-family-1;
   position: absolute;
-  top: $accordion-mobile-height;
+  top: $mobile-height;
   width: 100%;
   z-index: 1;
 
