--- a/app/styles/components/map/search-panel.scss
+++ b/app/styles/components/map/search-panel.scss
@@ -23,7 +23,7 @@
   }
 }
 
-.searchAccordion {
+.searchInput {
   background-color: transparent;
   border: 0;
   border-bottom: 1px solid rgba($color-3, .3);
