Add vessel info panel to the main menu also and fix overflow of search list

--- a/app/styles/components/control_panel.scss
+++ b/app/styles/components/control_panel.scss
@@ -17,7 +17,8 @@
     background: transparent;
     flex: 0 1 auto;
     height: auto;
-    overflow-y: auto;
+    overflow: visible;
+
     // cancels pointer-events: none of c-map-panels
     pointer-events: auto;
     position: relative;
