--- a/app/styles/components/vessel-info-panel.scss
+++ b/app/styles/components/vessel-info-panel.scss
@@ -5,7 +5,6 @@
   color: $color-4;
   display: block;
   font-family: $font-family-1;
-  position: absolute;
   top: $mobile-height;
   width: 100%;
   z-index: 1;
@@ -34,17 +33,6 @@
 
     @media #{$mq-tablet} {
       max-height: none;
-    }
-
-
-    .pin {
-      fill: $color-3;
-      position: absolute;
-      right: 20px;
-
-      &._pinned {
-        fill: $color-4;
-      }
     }
 
     .rowInfo {
@@ -113,9 +101,39 @@
   .buttonsContainer {
     bottom: 0;
     display: flex;
-    position: absolute;
     right: 10px;
     transform: translate(0, 50%);
+    
+    float: right !important;
+    padding-right: 10px;
+
+    @media #{$mq-tablet} {
+      padding-right: 0px;
+      position: absolute;
+    }
+
+    @media #{$mq-tablet} {
+      bottom: auto;
+      right: -20px;
+      top: 0;
+      transform: translate(-50%, -50%);
+    }
+
+    .pinButton {
+      background-color: #fff;
+      border-radius: 50%;
+      padding: 0px 7px;
+      margin-left: 10px;
+      
+      .pin {
+        margin-top: 5px;
+        fill: $color-1;
+
+        &._pinned {
+          fill: $color-3;
+        }
+      }
+    }
 
     > button {
       position: relative;
@@ -124,14 +142,6 @@
       &:not(:first-child) {
         margin: 0 0 0 10px;
       }
-    }
-
-    @media #{$mq-tablet} {
-      bottom: auto;
-      left: 0;
-      right: auto;
-      top: 0;
-      transform: translate(-50%, -50%);
     }
   }
 }
