Fix pinnedVesels in heading margin

--- a/app/styles/components/control_panel.scss
+++ b/app/styles/components/control_panel.scss
@@ -114,6 +114,7 @@
     font-size: $font-size-xs-small;
     font-weight: $font-weight-bold;
     text-transform: uppercase;
+    margin-left: 10px;
   }
 }
 
